validatingadmissionpolicy/privileged-binding.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: previleged-binding
spec:
  policyName: previleged
  validationActions: [Deny]
  matchResources:
    namespaceSelector:
      matchLabels:
        environment: test
