validatingadmissionpolicy/probe-must-be-set-binding.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: probe-must-be-set-binding
spec:
  policyName: probe-must-be-set
  validationActions: [Deny]
  matchResources:
    namespaceSelector:
      matchLabels:
        environment: test
